exports[`array-type > invalid 1`] = `
{
  "diagnostics": [
    {
      "ruleName": "array-type",
      "messageId": "errorStringArray",
      "message": "Array type using 'Array<number>' is forbidden. Use 'number[]' instead.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 8
        },
        "end": {
          "line": 1,
          "column": 21
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`array-type > invalid 10`] = `
{
  "diagnostics": [
    {
      "ruleName": "array-type",
      "messageId": "errorStringArray",
      "message": "Array type using 'Array<T>' is forbidden. Use 'T[]' instead.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 8
        },
        "end": {
          "line": 1,
          "column": 30
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`array-type > invalid 11`] = `
{
  "diagnostics": [
    {
      "ruleName": "array-type",
      "messageId": "errorStringArraySimple",
      "message": "Array type using 'ReadonlyArray<number>' is forbidden for simple types. Use 'readonly number[]' instead.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 8
        },
        "end": {
          "line": 1,
          "column": 29
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`array-type > invalid 12`] = `
{
  "diagnostics": [
    {
      "ruleName": "array-type",
      "messageId": "errorStringGenericSimple",
      "message": "Array type using 'readonly T[]' is forbidden for non-simple types. Use 'ReadonlyArray<T>' instead.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 8
        },
        "end": {
          "line": 1,
          "column": 36
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`array-type > invalid 13`] = `
{
  "diagnostics": [
    {
      "ruleName": "array-type",
      "messageId": "errorStringArray",
      "message": "Array type using 'Array<number>' is forbidden. Use 'number[]' instead.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 8
        },
        "end": {
          "line": 1,
          "column": 21
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`array-type > invalid 14`] = `
{
  "diagnostics": [
    {
      "ruleName": "array-type",
      "messageId": "errorStringArray",
      "message": "Array type using 'Array<T>' is forbidden. Use 'T[]' instead.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 8
        },
        "end": {
          "line": 1,
          "column": 30
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`array-type > invalid 15`] = `
{
  "diagnostics": [
    {
      "ruleName": "array-type",
      "messageId": "errorStringGeneric",
      "message": "Array type using 'readonly number[]' is forbidden. Use 'ReadonlyArray<number>' instead.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 8
        },
        "end": {
          "line": 1,
          "column": 25
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`array-type > invalid 16`] = `
{
  "diagnostics": [
    {
      "ruleName": "array-type",
      "messageId": "errorStringGeneric",
      "message": "Array type using 'readonly T[]' is forbidden. Use 'ReadonlyArray<T>' instead.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 8
        },
        "end": {
          "line": 1,
          "column": 36
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`array-type > invalid 17`] = `
{
  "diagnostics": [
    {
      "ruleName": "array-type",
      "messageId": "errorStringArraySimple",
      "message": "Array type using 'Array<number>' is forbidden for simple types. Use 'number[]' instead.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 8
        },
        "end": {
          "line": 1,
          "column": 21
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`array-type > invalid 18`] = `
{
  "diagnostics": [
    {
      "ruleName": "array-type",
      "messageId": "errorStringGenericSimple",
      "message": "Array type using 'T[]' is forbidden for non-simple types. Use 'Array<T>' instead.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 8
        },
        "end": {
          "line": 1,
          "column": 27
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`array-type > invalid 19`] = `
{
  "diagnostics": [
    {
      "ruleName": "array-type",
      "messageId": "errorStringArraySimple",
      "message": "Array type using 'ReadonlyArray<number>' is forbidden for simple types. Use 'readonly number[]' instead.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 8
        },
        "end": {
          "line": 1,
          "column": 29
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`array-type > invalid 2`] = `
{
  "diagnostics": [
    {
      "ruleName": "array-type",
      "messageId": "errorStringArray",
      "message": "Array type using 'Array<T>' is forbidden. Use 'T[]' instead.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 8
        },
        "end": {
          "line": 1,
          "column": 30
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`array-type > invalid 20`] = `
{
  "diagnostics": [
    {
      "ruleName": "array-type",
      "messageId": "errorStringGenericSimple",
      "message": "Array type using 'readonly T[]' is forbidden for non-simple types. Use 'ReadonlyArray<T>' instead.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 8
        },
        "end": {
          "line": 1,
          "column": 36
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`array-type > invalid 21`] = `
{
  "diagnostics": [
    {
      "ruleName": "array-type",
      "messageId": "errorStringArraySimple",
      "message": "Array type using 'Array<number>' is forbidden for simple types. Use 'number[]' instead.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 8
        },
        "end": {
          "line": 1,
          "column": 21
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`array-type > invalid 22`] = `
{
  "diagnostics": [
    {
      "ruleName": "array-type",
      "messageId": "errorStringGenericSimple",
      "message": "Array type using 'T[]' is forbidden for non-simple types. Use 'Array<T>' instead.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 8
        },
        "end": {
          "line": 1,
          "column": 27
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`array-type > invalid 23`] = `
{
  "diagnostics": [
    {
      "ruleName": "array-type",
      "messageId": "errorStringArray",
      "message": "Array type using 'ReadonlyArray<number>' is forbidden. Use 'readonly number[]' instead.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 8
        },
        "end": {
          "line": 1,
          "column": 29
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`array-type > invalid 24`] = `
{
  "diagnostics": [
    {
      "ruleName": "array-type",
      "messageId": "errorStringArray",
      "message": "Array type using 'ReadonlyArray<T>' is forbidden. Use 'readonly T[]' instead.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 8
        },
        "end": {
          "line": 1,
          "column": 38
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`array-type > invalid 25`] = `
{
  "diagnostics": [
    {
      "ruleName": "array-type",
      "messageId": "errorStringArraySimple",
      "message": "Array type using 'Array<number>' is forbidden for simple types. Use 'number[]' instead.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 8
        },
        "end": {
          "line": 1,
          "column": 21
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`array-type > invalid 26`] = `
{
  "diagnostics": [
    {
      "ruleName": "array-type",
      "messageId": "errorStringGenericSimple",
      "message": "Array type using 'T[]' is forbidden for non-simple types. Use 'Array<T>' instead.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 8
        },
        "end": {
          "line": 1,
          "column": 27
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`array-type > invalid 27`] = `
{
  "diagnostics": [
    {
      "ruleName": "array-type",
      "messageId": "errorStringArraySimple",
      "message": "Array type using 'ReadonlyArray<number>' is forbidden for simple types. Use 'readonly number[]' instead.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 8
        },
        "end": {
          "line": 1,
          "column": 29
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`array-type > invalid 28`] = `
{
  "diagnostics": [
    {
      "ruleName": "array-type",
      "messageId": "errorStringGenericSimple",
      "message": "Array type using 'readonly T[]' is forbidden for non-simple types. Use 'ReadonlyArray<T>' instead.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 8
        },
        "end": {
          "line": 1,
          "column": 36
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`array-type > invalid 29`] = `
{
  "diagnostics": [
    {
      "ruleName": "array-type",
      "messageId": "errorStringArraySimple",
      "message": "Array type using 'Array<number>' is forbidden for simple types. Use 'number[]' instead.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 8
        },
        "end": {
          "line": 1,
          "column": 21
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`array-type > invalid 3`] = `
{
  "diagnostics": [
    {
      "ruleName": "array-type",
      "messageId": "errorStringArray",
      "message": "Array type using 'ReadonlyArray<number>' is forbidden. Use 'readonly number[]' instead.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 8
        },
        "end": {
          "line": 1,
          "column": 29
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`array-type > invalid 30`] = `
{
  "diagnostics": [
    {
      "ruleName": "array-type",
      "messageId": "errorStringGenericSimple",
      "message": "Array type using 'T[]' is forbidden for non-simple types. Use 'Array<T>' instead.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 8
        },
        "end": {
          "line": 1,
          "column": 27
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`array-type > invalid 31`] = `
{
  "diagnostics": [
    {
      "ruleName": "array-type",
      "messageId": "errorStringGeneric",
      "message": "Array type using 'readonly number[]' is forbidden. Use 'ReadonlyArray<number>' instead.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 8
        },
        "end": {
          "line": 1,
          "column": 25
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`array-type > invalid 32`] = `
{
  "diagnostics": [
    {
      "ruleName": "array-type",
      "messageId": "errorStringGeneric",
      "message": "Array type using 'readonly T[]' is forbidden. Use 'ReadonlyArray<T>' instead.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 8
        },
        "end": {
          "line": 1,
          "column": 36
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`array-type > invalid 33`] = `
{
  "diagnostics": [
    {
      "ruleName": "array-type",
      "messageId": "errorStringGeneric",
      "message": "Array type using 'number[]' is forbidden. Use 'Array<number>' instead.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 8
        },
        "end": {
          "line": 1,
          "column": 16
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`array-type > invalid 34`] = `
{
  "diagnostics": [
    {
      "ruleName": "array-type",
      "messageId": "errorStringGeneric",
      "message": "Array type using 'T[]' is forbidden. Use 'Array<T>' instead.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 8
        },
        "end": {
          "line": 1,
          "column": 27
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`array-type > invalid 35`] = `
{
  "diagnostics": [
    {
      "ruleName": "array-type",
      "messageId": "errorStringGeneric",
      "message": "Array type using 'readonly number[]' is forbidden. Use 'ReadonlyArray<number>' instead.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 8
        },
        "end": {
          "line": 1,
          "column": 25
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`array-type > invalid 36`] = `
{
  "diagnostics": [
    {
      "ruleName": "array-type",
      "messageId": "errorStringGeneric",
      "message": "Array type using 'readonly T[]' is forbidden. Use 'ReadonlyArray<T>' instead.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 8
        },
        "end": {
          "line": 1,
          "column": 36
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`array-type > invalid 37`] = `
{
  "diagnostics": [
    {
      "ruleName": "array-type",
      "messageId": "errorStringGeneric",
      "message": "Array type using 'number[]' is forbidden. Use 'Array<number>' instead.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 8
        },
        "end": {
          "line": 1,
          "column": 16
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`array-type > invalid 4`] = `
{
  "diagnostics": [
    {
      "ruleName": "array-type",
      "messageId": "errorStringArray",
      "message": "Array type using 'ReadonlyArray<T>' is forbidden. Use 'readonly T[]' instead.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 8
        },
        "end": {
          "line": 1,
          "column": 38
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`array-type > invalid 5`] = `
{
  "diagnostics": [
    {
      "ruleName": "array-type",
      "messageId": "errorStringArray",
      "message": "Array type using 'Array<number>' is forbidden. Use 'number[]' instead.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 8
        },
        "end": {
          "line": 1,
          "column": 21
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`array-type > invalid 6`] = `
{
  "diagnostics": [
    {
      "ruleName": "array-type",
      "messageId": "errorStringArray",
      "message": "Array type using 'Array<T>' is forbidden. Use 'T[]' instead.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 8
        },
        "end": {
          "line": 1,
          "column": 30
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`array-type > invalid 7`] = `
{
  "diagnostics": [
    {
      "ruleName": "array-type",
      "messageId": "errorStringArray",
      "message": "Array type using 'ReadonlyArray<number>' is forbidden. Use 'readonly number[]' instead.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 8
        },
        "end": {
          "line": 1,
          "column": 29
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`array-type > invalid 8`] = `
{
  "diagnostics": [
    {
      "ruleName": "array-type",
      "messageId": "errorStringArray",
      "message": "Array type using 'ReadonlyArray<T>' is forbidden. Use 'readonly T[]' instead.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 8
        },
        "end": {
          "line": 1,
          "column": 38
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;

exports[`array-type > invalid 9`] = `
{
  "diagnostics": [
    {
      "ruleName": "array-type",
      "messageId": "errorStringArray",
      "message": "Array type using 'Array<number>' is forbidden. Use 'number[]' instead.",
      "filePath": "src/virtual.ts",
      "range": {
        "start": {
          "line": 1,
          "column": 8
        },
        "end": {
          "line": 1,
          "column": 21
        }
      }
    }
  ],
  "errorCount": 1,
  "fileCount": 1,
  "ruleCount": 1
}
`;
